--- a/app/src/main/res/layout/content_iceland_events.xml
+++ b/app/src/main/res/layout/content_iceland_events.xml
@@ -16,5 +16,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/eventListView" />
+        android:id="@+id/eventListView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
