--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:id="@+id/content_login"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.hbv2.icelandevents.LoginActivity"
+    tools:showIn="@layout/activity_login">
 
     <TextView
-        android:text="Login"
+        android:text="Sign In"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="47dp"
@@ -32,16 +42,27 @@
         android:ems="10"
         android:layout_below="@+id/usernameEditText"
         android:layout_centerHorizontal="true"
-        android:id="@+id/PasswordEditText" />
+        android:id="@+id/passwordEditText" />
 
     <Button
-        android:text="Login"
+        android:text="Sign In"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="59dp"
-        android:id="@+id/loginBtn"
+        android:id="@+id/signInBtnId"
         android:textSize="18sp"
-        android:layout_below="@+id/PasswordEditText"
+        android:layout_below="@+id/passwordEditText"
         android:layout_centerHorizontal="true"
-        android:onClick="loginOnClick" />
+        android:onClick="signInOnClick" />
+
+    <Button
+        android:text="Skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/SkipBtn"
+        android:layout_below="@+id/signInBtnId"
+        android:layout_alignStart="@+id/signInBtnId"
+        android:onClick="skipOnClick" />
+
+
 </RelativeLayout>
