--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -17,52 +17,81 @@
         android:text="Sign In"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="47dp"
         android:id="@+id/textView"
         android:textSize="30sp"
-        android:layout_alignParentTop="true"
         android:textAlignment="center"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text="Username"
-        android:ems="10"
-        android:id="@+id/usernameEditText"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_below="@+id/usernameEditText"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/passwordEditText" />
 
     <Button
         android:text="Sign In"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="59dp"
         android:id="@+id/signInBtnId"
         android:textSize="18sp"
+        android:onClick="signInOnClick"
         android:layout_below="@+id/passwordEditText"
         android:layout_centerHorizontal="true"
-        android:onClick="signInOnClick" />
+        android:layout_marginTop="79dp" />
 
     <Button
         android:text="Skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/SkipBtn"
+        android:onClick="skipOnClick"
         android:layout_below="@+id/signInBtnId"
-        android:layout_alignStart="@+id/signInBtnId"
-        android:onClick="skipOnClick" />
+        android:layout_alignStart="@+id/signInBtnId" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/signInMsgTextView"
+        android:layout_below="@+id/textView"
+        android:layout_marginTop="36dp"
+        android:textSize="18sp"
+        android:layout_alignStart="@+id/textView2"
+        android:layout_alignEnd="@+id/textView2" />
+
+    <TextView
+        android:text="Username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:layout_below="@+id/signInMsgTextView"
+        android:layout_alignStart="@+id/usernameEditText"
+        android:layout_alignEnd="@+id/usernameEditText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/usernameEditText"
+        android:layout_below="@+id/textView2"
+        android:layout_alignStart="@+id/passwordEditText" />
+
+    <TextView
+        android:text="Password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:textSize="24sp"
+        android:textAlignment="center"
+        android:layout_below="@+id/usernameEditText"
+        android:layout_alignEnd="@+id/usernameEditText"
+        android:layout_alignStart="@+id/usernameEditText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/passwordEditText"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
