Nöfn á öllum View´s sett í values/string, og kallað í með @string/bla í staðin fyrir að hardcode nöfnin

--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -14,7 +14,7 @@
     tools:showIn="@layout/activity_login">
 
     <TextView
-        android:text="Sign In"
+        android:text="@string/sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
@@ -24,7 +24,7 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Sign In"
+        android:text="@string/sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/signInBtnId"
@@ -35,7 +35,7 @@
         android:layout_marginTop="79dp" />
 
     <Button
-        android:text="Skip"
+        android:text="@string/skip_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/SkipBtn"
@@ -54,7 +54,7 @@
         android:layout_alignEnd="@+id/textView2" />
 
     <TextView
-        android:text="Username"
+        android:text="@string/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
@@ -74,7 +74,7 @@
         android:layout_alignStart="@+id/passwordEditText" />
 
     <TextView
-        android:text="Password"
+        android:text="@string/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView3"
