--- a/app/src/main/res/layout/activity_iceland_events.xml
+++ b/app/src/main/res/layout/activity_iceland_events.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <Button
-            android:text="Button"
+            android:text="@string/get_event_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/EventBtn"
@@ -21,7 +21,7 @@
             android:onClick="getEventBtn" />
 
         <Button
-            android:text="Sign In"
+            android:text="@string/sign_in"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/signInBtnId"
