--- a/app/src/main/res/layout/event_layout.xml
+++ b/app/src/main/res/layout/event_layout.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="TextView"
+        android:text="@string/text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/eventImageView"
@@ -23,7 +23,7 @@
         android:paddingRight="20dp" />
 
     <TextView
-        android:text="TextView"
+        android:text="@string/text_view"
         android:layout_height="wrap_content"
         android:id="@+id/timeTextView"
         android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
         android:layout_toEndOf="@+id/dateTextView" />
 
     <TextView
-        android:text="TextView"
+        android:text="@string/text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nameTextView"
