--- a/app/src/main/res/menu/menu_iceland_events.xml
+++ b/app/src/main/res/menu/menu_iceland_events.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.hbv2.icelandevents.IcelandEvents">
+    tools:context="com.hbv2.icelandevents.Activity.IcelandEvents">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
