--- a/app/src/main/res/layout/content_forgot_password.xml
+++ b/app/src/main/res/layout/content_forgot_password.xml
@@ -13,4 +13,43 @@
     tools:context="com.hbv2.icelandevents.Activity.ForgotPasswordActivity"
     tools:showIn="@layout/activity_forgot_password">
 
+    <TextView
+        android:text="@string/forgot_password_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="133dp"
+        android:layout_marginTop="16dp"
+        android:id="@+id/textView10" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="@string/enter_email_editText"
+        android:textAlignment="center"
+        android:ems="10"
+        android:layout_below="@+id/textView10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:id="@+id/editText6" />
+
+    <Button
+        android:text="@string/resetPasswordBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="68dp"
+        android:id="@+id/resetPasswBtnId"
+        android:layout_below="@+id/editText6"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/sign_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="49dp"
+        android:id="@+id/signInBtnActForgPId"
+        android:layout_below="@+id/resetPasswBtnId"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
