--- a/app/src/main/res/layout/content_forgot_password.xml
+++ b/app/src/main/res/layout/content_forgot_password.xml
@@ -13,21 +13,11 @@
     tools:context="com.hbv2.icelandevents.Activity.ForgotPasswordActivity"
     tools:showIn="@layout/activity_forgot_password">
 
-    <TextView
-        android:text="@string/forgot_password_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="133dp"
-        android:layout_marginTop="16dp"
-        android:id="@+id/textView10" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="@string/enter_email_editText"
+        android:hint="@string/enter_email_editText"
         android:textAlignment="center"
         android:ems="10"
         android:layout_below="@+id/textView10"
