--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -17,6 +17,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
+        android:hint="Name of the Event"
+        android:ems="10"
+        android:id="@+id/eventNameText"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/timeText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
         android:hint="Location"
         android:ems="10"
         android:id="@+id/locationText"
@@ -25,16 +36,6 @@
         android:layout_below="@+id/eventNameText"
         android:layout_alignStart="@+id/eventNameText" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Name of the Event"
-        android:ems="10"
-        android:id="@+id/eventNameText"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/timeText" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -91,6 +92,13 @@
         android:onClick="upImageBtnOnclick"
         android:layout_marginTop="29dp"
         android:layout_below="@+id/dateText"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageUrlText"
+        android:layout_below="@+id/upImageBtn"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
