ForgotPasswordActivity og ResetPasswordActivity, á eftir að klára

--- a/app/src/main/res/layout/content_forgot_password.xml
+++ b/app/src/main/res/layout/content_forgot_password.xml
@@ -16,14 +16,14 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:hint="@string/enter_email_editText"
         android:textAlignment="center"
         android:ems="10"
         android:layout_below="@+id/textView10"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:id="@+id/editText6" />
+        android:id="@+id/emailText" />
 
     <Button
         android:text="@string/resetPasswordBtn"
@@ -31,7 +31,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:id="@+id/resetPasswBtnId"
-        android:layout_below="@+id/editText6"
+        android:onClick="resetPasswBtnOnClick"
+        android:layout_below="@+id/emailText"
         android:layout_centerHorizontal="true" />
 
     <Button
