--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -5,34 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.hbv2.icelandevents.Activity.ForgotPasswordActivity">
-
-    <include layout="@layout/content_forgot_password" />
+    tools:context="com.hbv2.icelandevents.Activity.ResetPasswordActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
-
-        <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-
-            <TextView
-                android:text="@string/forgot_password_btn"
-                android:layout_width="248dp"
-                android:layout_height="match_parent"
-                android:textSize="30dp"
-                android:id="@+id/textView10"
-                android:layout_marginEnd="53dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="14dp" />
-
-        </RelativeLayout>
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -42,5 +20,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_reset_password" />
 
 </android.support.design.widget.CoordinatorLayout>
