--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -24,105 +24,65 @@
         android:textSize="30sp"
         android:layout_marginBottom="20dp" />
 
-    <TextView
-        android:text="@string/your_name"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView5"
-        android:textSize="18sp"
-        android:textStyle="normal|bold" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_below="@+id/textView5"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/editText" />
-
-    <TextView
-        android:text="@string/your_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_alignStart="@+id/textView5"
-        android:id="@+id/textView6"
-        android:textSize="18sp"
+        android:id="@+id/nameEditTextId"
+        android:hint="@string/your_name"
         android:textAlignment="center"
-        android:textStyle="normal|bold" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_below="@+id/textView6"
-        android:layout_alignStart="@+id/editText"
-        android:id="@+id/editText2" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/editText3"
-        android:layout_below="@+id/textView7"
-        android:layout_alignStart="@+id/editText2" />
-
-    <TextView
-        android:text="@string/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText3"
-        android:layout_alignStart="@+id/textView7"
-        android:id="@+id/textView8"
-        android:textSize="18sp"
-        android:textAlignment="center"
-        android:textStyle="normal|bold" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_below="@+id/textView8"
-        android:layout_alignEnd="@+id/editText3"
-        android:id="@+id/editText4" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_below="@+id/textView9"
-        android:layout_alignStart="@+id/editText4"
-        android:id="@+id/editText5"
         android:layout_marginBottom="10dp" />
 
-    <TextView
-        android:text="@string/username"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/editText2"
-        android:layout_centerHorizontal="true"
-        android:textSize="18sp"
+        android:inputType="textEmailAddress"
+        android:ems="10"
+        android:layout_below="@+id/nameEditTextId"
+        android:layout_alignEnd="@+id/nameEditTextId"
+        android:id="@+id/emailEditTextId"
+        android:hint="@string/your_email"
         android:textAlignment="center"
-        android:textStyle="normal|bold" />
+        android:layout_marginBottom="10dp" />
 
-    <TextView
-        android:text="@string/confirm_your_password"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView9"
-        android:textSize="18sp"
-        android:layout_below="@+id/editText4"
-        android:layout_centerHorizontal="true"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:layout_below="@+id/emailEditTextId"
+        android:layout_alignEnd="@+id/emailEditTextId"
+        android:id="@+id/usernameEditTextId"
+        android:hint="@string/username"
         android:textAlignment="center"
-        android:textStyle="normal|bold" />
+        android:layout_marginBottom="10dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:layout_below="@+id/usernameEditTextId"
+        android:layout_alignEnd="@+id/usernameEditTextId"
+        android:id="@+id/passwordEditTextId"
+        android:hint="@string/password"
+        android:textAlignment="center"
+        android:layout_marginBottom="10dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:layout_below="@+id/passwordEditTextId"
+        android:layout_alignStart="@+id/passwordEditTextId"
+        android:id="@+id/passwordConfEditTextId"
+        android:hint="@string/confirm_your_password"
+        android:textAlignment="center"
+        android:layout_marginBottom="20dp" />
 
     <Button
         android:text="@string/sign_up"
@@ -132,19 +92,8 @@
         android:onClick="signUpBtnOnClick"
         android:textSize="24sp"
         android:textAllCaps="false"
-        android:layout_below="@+id/editText5"
-        android:layout_alignStart="@+id/editText5"
-        android:layout_alignEnd="@+id/editText5" />
+        android:layout_below="@+id/passwordConfEditTextId"
+        android:layout_alignStart="@+id/passwordConfEditTextId"
+        android:layout_alignEnd="@+id/passwordConfEditTextId" />
 
-    <Button
-        android:text="@string/back_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/backSignUpBtnId"
-        android:layout_alignStart="@+id/SignUpBtnId"
-        android:layout_alignEnd="@+id/SignUpBtnId"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:onClick="backSignUpBtnOnClick" />
 </RelativeLayout>
