Nýr menu og takkar og eitthvað

--- a/app/src/main/res/menu/menu_when_signed_in.xml
+++ b/app/src/main/res/menu/menu_when_signed_in.xml
@@ -3,15 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.hbv2.icelandevents.Activity.IcelandEvents">
     <item
-        android:id="@+id/menu_sign_in"
+        android:id="@+id/menu_my_events"
         android:orderInCategory="100"
-        android:title="@string/sign_in"
+        android:title="My Events"
         app:showAsAction="always" />
 
-    <item
-        android:id="@+id/menu_sign_up"
-        android:orderInCategory="100"
-        android:title="@string/sign_up"
 
-        app:showAsAction="always" />
 </menu>
