bæta in dateDailog

--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -47,7 +47,9 @@
         android:layout_below="@+id/timeText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:inputType="date" />
+        android:inputType="date"
+        android:focusable="false"
+        />
 
 
     <EditText
@@ -100,5 +102,14 @@
         android:id="@+id/imageUrlText"
         android:layout_below="@+id/upImageBtn"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/upImageBtn"
+        android:layout_alignEnd="@+id/createBtn"
+        android:id="@+id/button3"
+        android:onClick="dateOnClick" />
 
 </RelativeLayout>
