--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -111,6 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:id="@+id/forgotPasswBtnId"
+        android:onClick="forgotPasswBtn"
         android:layout_below="@+id/backSignInBtnId"
         android:layout_centerHorizontal="true" />
 
