EditEvent og MyEvent

--- a/app/src/main/res/layout/content_edit_event.xml
+++ b/app/src/main/res/layout/content_edit_event.xml
@@ -13,12 +13,106 @@
     tools:context="com.hbv2.icelandevents.Activity.EditEventActivity"
     tools:showIn="@layout/activity_edit_event">
 
-    <TextView
-        android:text="TextView"
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="Name of the Event"
+        android:ems="10"
+        android:id="@+id/eventNameText"
+        android:textAlignment="center"
         android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/timeText" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="Location"
+        android:ems="10"
+        android:id="@+id/locationText"
+        android:textAlignment="center"
+        android:layout_marginTop="14dp"
+        android:layout_below="@+id/eventNameText"
+        android:layout_alignStart="@+id/eventNameText" />
+
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Date"
+        android:ems="10"
+        android:id="@+id/dateText"
+        android:textAlignment="center"
+        android:layout_below="@+id/timeText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp"
-        android:id="@+id/editEventName" />
+        android:layout_marginTop="16dp"
+        android:inputType="date"
+        android:focusable="false"
+        />
+
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="Time"
+        android:ems="10"
+        android:id="@+id/timeText"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/descriptionText"
+        android:layout_alignStart="@+id/dateText"
+        android:focusable="false" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:hint="Description"
+        android:ems="10"
+        android:id="@+id/descriptionText"
+        android:textAlignment="center"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/locationText"
+        android:layout_alignStart="@+id/locationText" />
+
+    <Button
+        android:text="New Image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/upImageBtn"
+        android:onClick="upImageBtnOnclick"
+        android:layout_marginTop="29dp"
+        android:layout_below="@+id/dateText"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageUrlText"
+        android:layout_below="@+id/upImageBtn"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:hint="Create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/saveBtn"
+        android:onClick="createBtnOnClick"
+        android:layout_marginTop="18dp"
+        android:layout_below="@+id/imageUrlText"
+        android:layout_toStartOf="@+id/upImageBtn"
+        android:text="Save" />
+
+    <Button
+        android:text="Remove"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/removeBtn"
+        android:onClick="removeBtnOnClick"
+        android:layout_alignBaseline="@+id/saveBtn"
+        android:layout_alignBottom="@+id/saveBtn"
+        android:layout_toEndOf="@+id/upImageBtn" />
+
 </RelativeLayout>
