Radiobuttonar fyrir createEvent og EditEvent

--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -65,16 +65,6 @@
         android:layout_alignStart="@+id/dateText"
         android:focusable="false" />
 
-    <Button
-        android:hint="Create"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/createBtn"
-        android:onClick="createBtnOnClick"
-        android:layout_below="@+id/upImageBtn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -88,29 +78,73 @@
         android:layout_alignStart="@+id/locationText" />
 
     <Button
+        android:hint="Create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/createBtn"
+        android:onClick="createBtnOnClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
         android:text="Upload Image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/upImageBtn"
         android:onClick="upImageBtnOnclick"
-        android:layout_marginTop="29dp"
-        android:layout_below="@+id/dateText"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/createBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="34dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageUrlText"
-        android:layout_below="@+id/upImageBtn"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/createBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp" />/>
 
-    <Button
-        android:text="Button"
-        android:layout_width="wrap_content"
+    <RadioGroup
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/upImageBtn"
-        android:layout_alignEnd="@+id/createBtn"
-        android:id="@+id/button3"
-        android:onClick="dateOnClick" />
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="40dp"
+        android:layout_below="@+id/dateText"
+        android:layout_alignParentStart="true">
+
+        <RadioButton
+            android:text="Other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioBtnOther"
+            android:checked="true"
+            android:onClick="onRadioButtonClicked"
+            />
+
+        <RadioButton
+            android:text="Rock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioBtnRock"
+            android:onClick="onRadioButtonClicked"
+            />
+
+        <RadioButton
+            android:text="Pop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioBtnPop"
+            android:onClick="onRadioButtonClicked"
+            />
+
+        <RadioButton
+            android:text="Jazz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioBtnJazz"
+            android:onClick="onRadioButtonClicked"
+            />
+    </RadioGroup>
 
 </RelativeLayout>
