--- a/app/src/main/res/layout/content_edit_event.xml
+++ b/app/src/main/res/layout/content_edit_event.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_edit_event"
+    android:id="@+id/content_create_event"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hbv2.icelandevents.Activity.EditEventActivity"
+    tools:context="com.hbv2.icelandevents.Activity.CreateEventActivity"
     tools:showIn="@layout/activity_edit_event">
 
     <EditText
@@ -78,41 +78,73 @@
         android:layout_alignStart="@+id/locationText" />
 
     <Button
-        android:text="New Image"
+        android:hint="Create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/createBtn"
+        android:onClick="createBtnOnClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Upload Image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/upImageBtn"
         android:onClick="upImageBtnOnclick"
-        android:layout_marginTop="29dp"
-        android:layout_below="@+id/dateText"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/createBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="34dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageUrlText"
-        android:layout_below="@+id/upImageBtn"
-        android:layout_centerHorizontal="true" />
+        android:layout_above="@+id/createBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp" />/>
 
-    <Button
-        android:hint="Create"
-        android:layout_width="wrap_content"
+    <RadioGroup
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/saveBtn"
-        android:onClick="createBtnOnClick"
-        android:layout_marginTop="18dp"
-        android:layout_below="@+id/imageUrlText"
-        android:layout_toStartOf="@+id/upImageBtn"
-        android:text="Save" />
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="40dp"
+        android:layout_below="@+id/dateText"
+        android:layout_alignParentStart="true">
 
-    <Button
-        android:text="Remove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/removeBtn"
-        android:onClick="removeBtnOnClick"
-        android:layout_alignBaseline="@+id/saveBtn"
-        android:layout_alignBottom="@+id/saveBtn"
-        android:layout_toEndOf="@+id/upImageBtn" />
+        <RadioButton
+            android:text="Other"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioBtnOther"
+            android:checked="true"
+            android:onClick="onRadioButtonClicked"
+            />
+
+        <RadioButton
+            android:text="Rock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioBtnRock"
+            android:onClick="onRadioButtonClicked"
+            />
+
+        <RadioButton
+            android:text="Pop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioBtnPop"
+            android:onClick="onRadioButtonClicked"
+            />
+
+        <RadioButton
+            android:text="Jazz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/radioBtnJazz"
+            android:onClick="onRadioButtonClicked"
+            />
+    </RadioGroup>
 
 </RelativeLayout>
