vara að vinna í calander og hreinsa til og það er erro í myEventActivity

--- a/app/src/main/res/layout/content_iceland_events.xml
+++ b/app/src/main/res/layout/content_iceland_events.xml
@@ -15,9 +15,22 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/eventListView"
-        android:layout_below="@+id/signInAsIdTextView"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/calendarEditTextId" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:ems="10"
+        android:id="@+id/calendarEditTextId"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:hint="@string/choose_a_date"
+        android:focusable="false"
+        android:textAlignment="center" />
 
 </RelativeLayout>
