--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -7,10 +7,19 @@
     android:fitsSystemWindows="true"
     tools:context="com.hbv2.icelandevents.Activity.CreateEventActivity">
 
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
+
+        <TextView
+            android:layout_marginLeft="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/signInAsIdTextView"
+            android:layout_weight="1"
+            android:textAlignment="viewStart"/>
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
